# stoke

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  Cargo.toml  Dockerfile  LICENSE  README.md  stoke.example.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: cost_comparison.py  cost_simulation.py  run_benchmark.py  run_cloud_models.sh  run_gpqa.py  run_mbpp.py  run_small_models.sh  run_swebench.py
docs/: PATTERNS.md
docs/design/: routing.md
docs/guides/: block-prompt-injection-at-the-gateway.md  cap-claude-code-api-spend.md  expose-ollama-to-your-network-safely.md  run-ollama-across-two-machines.md  stop-a-runaway-ai-agent.md
landing/: 404.html  _headers  _redirects  index.html  install.sh  llms.txt  robots.txt  sitemap.xml  wrangler.toml
landing/guides/: index.html
landing/guides/block-prompt-injection-at-the-gateway/: index.html
landing/guides/cap-claude-code-api-spend/: index.html
landing/guides/expose-ollama-to-your-network-safely/: index.html
landing/guides/run-ollama-across-two-machines/: index.html
landing/guides/stop-a-runaway-ai-agent/: index.html
plugins/: pii-redact.js
scripts/: build_guides.py  mock_counting_provider.py  mock_ollama.py  smoke.sh  smoke_federation.sh  smoke_spend.sh
skills/stoke/: SKILL.md
src/: auto_route.rs  budget.rs  builtins.rs  cache.rs  cli.rs  config.rs  cost.rs  failover.rs  js_plugins.rs  lib.rs  main.rs  messages.rs  nodes.rs  plugins.rs  router.rs  sse.rs  stream_fusion.rs  ttft.rs
tests/: fusion_tests.rs
