[package]
name = "stoke"
version = "0.1.1"
edition = "2021"
description = "The kill switch for runaway AI. Hard budget caps, loop detection, local-first routing — in one Rust binary."
license = "MIT"
repository = "https://github.com/Ozperium/stoke"
homepage = "https://stokegate.com"
readme = "README.md"
keywords = ["llm", "gateway", "proxy", "ollama", "budget"]
categories = ["web-programming::http-server", "command-line-utilities"]

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1

[features]
default = []
js-plugins = ["deno_core"]
deno_core = ["dep:deno_core"]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "gzip", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
deno_core = { version = "0.311", optional = true }

[[bin]]
name = "stoke"
path = "src/main.rs"

[[bin]]
name = "stoke-cli"
path = "src/cli.rs"
